# markdown-task-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  dashboard.py  docker-compose.yml  pyproject.toml
docs/: PROJECT.md
docs/tasks/: 001-TASK-extract-html-template.md  002-TASK-deploy-to-ubuntu-server.md  003-TASK-use-github-app-for-repo-access.md  004-TASK-dark-mode-toggle.md
templates/: index.html
tests/: test_dashboard.py
